# pdf-highlighter

./: .gitignore  README.md  pyproject.toml
src/: gemini.py  main.py
